# skywalking-rust

./: .asf.yaml  .dockerignore  .gitignore  .gitignore copy  .gitmodules  .python-version  .rustfmt.toml  Cargo.toml  README.md  Release-guide.md  build.rs  docker-compose.dev.yml  docker-compose.e2e.yml  pyproject.toml  requirements.txt  rust-toolchain.toml
.github/: licenserc.yaml
.github/workflows/: ci.yaml  codecov.yaml  e2e.yml  test.yaml
core/: Cargo.toml
core/src/: lib.rs
core/src/skywalking/: mod.rs
core/src/skywalking/agent/: context_manager.rs  mod.rs  reporter.rs
core/src/skywalking/core/: context.rs  context_listener.rs  id.rs  log.rs  mod.rs  segment_ref.rs  span.rs  tag.rs
dist-material/: LICENSE  LICENSE.tpl
dist-material/licenses/: LICENSE-autotools.txt  LICENSE-futures-macro.txt  LICENSE-getrandom.txt  LICENSE-http.txt  LICENSE-mime.txt  LICENSE-pin-utils.txt  LICENSE-ppv-lite86.txt  LICENSE-rand_chacha.txt  LICENSE-remove_dir_all.txt  LICENSE-try-lock.txt  LICENSE-want.txt  LICENSE-windows_aarch64_msvc.txt
e2e/: Cargo.toml  run_e2e.py
e2e/data/: expected_context.yaml
e2e/docker/: Dockerfile
e2e/src/: e2e_kafka.rs  main.rs
e2e/tests/: kafka.rs
examples/: context_manager.rs  simple_log_report.rs  simple_management_report.rs  simple_meter_report.rs  simple_metric_report.rs  simple_trace_report.rs  sync_trace_report.rs
src/: lib.rs
src/common/: mod.rs  random_generator.rs  system_time.rs  time.rs  wait_group.rs
src/context/: context_manager.rs  mod.rs  span.rs  system_time.rs  trace_context.rs  tracer.rs
src/context/propagation/: context.rs  decoder.rs  encoder.rs
src/error/: mod.rs
src/logging/: logger.rs  mod.rs  record.rs
src/management/: instance.rs  manager.rs  mod.rs
src/metrics/: meter.rs  metricer.rs  mod.rs  record.rs
src/proto/: mod.rs
src/proto/v3/: mod.rs
src/reporter/: grpc.rs  kafka.rs  log.rs  mod.rs  once_cell.rs  print.rs
src/skywalking_proto/: mod.rs
src/skywalking_proto/v3/: mod.rs
src/trace/: mod.rs  span.rs  trace_context.rs  tracer.rs
src/trace/propagation/: context.rs  decoder.rs  encoder.rs  mod.rs
src/trace/reporter/: grpc.rs  log.rs  mod.rs
tests/: logging.rs  management.rs  metrics.rs  propagation.rs  trace_context.rs
tests/e2e/: Cargo.toml  run_e2e.py
tests/e2e/data/: _expected_context.yaml
tests/e2e/docker/: Dockerfile  Dockerfile.tool
tests/e2e/src/: main.rs
tracing-core/: Cargo.toml
tracing-core/src/: context.rs  context_carrier.rs  context_listener.rs  id.rs  lib.rs  log.rs  report_bridge.rs  segment_ref.rs  span.rs  tag.rs
