# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[workspace]
members = [
    ".",
    "e2e",
]

[workspace.dependencies]
rdkafka = "0.38.0"

[package]
name = "skywalking"
version = "0.9.0"
authors = ["Apache Software Foundation"]
edition = "2024"
description = "Apache SkyWalking Rust Agent"
license = "Apache-2.0"
homepage = "https://skywalking.apache.org/"
repository = "https://github.com/apache/skywalking-rust"
rust-version = "1.85"

[features]
management = ["hostname", "systemstat"]
vendored = ["protobuf-src"]
kafka-reporter = ["rdkafka"]

mock = []  # For internal integration testing only, do not use.

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
cfg-if = "1.0.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
hostname = { version = "0.4.0", optional = true }
parking_lot = "0.12.3"
portable-atomic = { version = "1.11.0", features = ["float"] }
prost = "0.13.5"
prost-derive = "0.13.5"
rdkafka = { workspace = true, optional = true }
serde = { version = "1.0.219", features = ["derive"] }
systemstat = { version = "0.2.4", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["parking_lot"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
tonic = { version = "0.12.3", features = ["codegen"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[build-dependencies]
protobuf-src = { version = "2.1.1", optional = true }
tonic-build = "0.12.3"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["net"] }

[[test]]
name = "trace_context"
required-features = ["mock"]

[[test]]
name = "logging"
required-features = ["mock"]

[[test]]
name = "metrics"
required-features = ["mock"]

[[test]]
name = "management"
required-features = ["management"]

[[example]]
name = "simple_trace_report"
path = "examples/simple_trace_report.rs"

[[example]]
name = "simple_management_report"
path = "examples/simple_management_report.rs"
required-features = ["management"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
