# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
# http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "skywalking-core"
version = "0.1.0"
authors = ["Apache Software Foundation (ASF)"]
edition = "2018"
description = "SkyWalking tracing core APIs. Provide the way to build SkyWalking native format traces/spans and propagated context."
license = "Apache 2.0"

[dependencies]
rand = "0.7.3"
base64 = "0.11.0"
lazy_static = "1.4.0"