# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
[package]
name = "e2e"
version = "0.0.0"
authors = ["Apache Software Foundation"]
edition = "2021"
publish = false
license = "Apache-2.0"
default-run = "e2e"

[[bin]]
name = "e2e-kafka"
path = "src/e2e_kafka.rs"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6", features = ["full"] }
hyper-util = "0.1.10"
prost = "0.13.5"
rdkafka = "0.37.0"
skywalking = { path = "..", features = ["kafka-reporter"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
