[package]
name = "skywalking-core"
version = "0.1.0"
authors = ["Apache Software Foundation (ASF)"]
edition = "2018"
description = "SkyWalking Rust Agent provides observability capability for Rust App and Library, including tracing, metrics, topology map for distributed system and alert."
license = "Apache 2.0"

[dependencies]