[package]
name = "skywalking-core"
version = "0.1.0"
authors = ["Apache Software Foundation (ASF)"]
edition = "2018"
description = "SkyWalking tracing core APIs. Provide the way to build SkyWalking native format traces/spans and propagated context."
license = "Apache 2.0"

[dependencies]
rand = "0.7.3"
base64 = "0.11.0"